--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "electron": "^1.6.1"
+    "axios": "^1.7.7",
+    "electron": "^32.1.2"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
